html + pet-project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <style src="style.css"></style>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="pet-project.js"></script>
 </body>
 </html>
