--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style src="style.css"></style>
 </head>
 <body>
-    <script src="pet-project.js"></script>
+    <p>Hello world</p>
+    <script src="index.js"></script>
+
 </body>
 </html>
