--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>Hello world</p>
-    <script src="pet-project.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
